removed old gimp files from gimp pixelation, removed godot icon, updated .gitignore, modified pallette analysis code

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 # Godot 4+ specific ignores
 .godot/
 Art/Color Palette Dataset/
+'Information Sources and Reading'/
+Information Sources and Reading/ 
