Reorganized and added common word tester

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 .godot/
 Art/Color Palette Dataset/
 'Information Sources and Reading'/
-Information Sources and Reading/ 
+Information Sources and Reading/
+Writing/'Chemistry Books'/
+Writing/Chemistry Books/
